[project]
name = "openai-sdk-raw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "openai>=2.43.0",
    "pgvector>=0.4.2",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
